sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:1: error: overriding method run in class BaseballEntity of type ()Unit;
 method run has incompatible type
override def run():(Int,Int) = {
             ^SelectBaseball:1: error: overriding method run in class Entity of type ()Unit;
 method run has incompatible type
override def run():(Int,Int) = {
             ^